# OpenTelemetry

./: .env.example  .gitignore  Makefile  README.md  requirements-dev.txt
.github/workflows/: ci.yml
cli/otelctl/: pyproject.toml
cli/otelctl/src/: otelctl.py
cli/otelctl/src/otelctl/: __init__.py  __main__.py
cli/otelctl/src/otelctl_auth/: __init__.py  db.py  models.py  tokens.py
cli/otelctl/src/otelctl_templates/: __init__.py  claude.env  codex.config.toml
cli/otelctl/tests/: test_otelctl.py
compose/: docker-compose.gateway.yml  docker-compose.signoz.override.yml  docker-compose.signoz.yml
docs/: architecture.md  codex-telemetry-storage.md  data-model.md  milestones.md  onboarding.md  operating.md  storage-retention.md  token-model.md  troubleshooting.md
docs/agent-context/: architecture-index.md  repo-map.md  test-commands.md
docs/agent-output/: AOTEL-001.md  AOTEL-002.md  AOTEL-003.md  AOTEL-004.md  AOTEL-005.md  AOTEL-006.md  AOTEL-007.md  AOTEL-008.md  AOTEL-009.md  AOTEL-010.md  AOTEL-011.md  AOTEL-012.md
docs/agent-plans/agent-otel-trial/: acceptance-tests.md  plan.json  plan.md  tasks.csv  test-baseline.md
docs/agentic-system/: feature-model.json  targeted-review-2026-05-28.md
infra/nginx/: README.md  nginx.conf
infra/otel/: collector.local.yaml  collector.prod.yaml
infra/signoz/: README.md
scripts/: backup-codex-config.sh  check-docs.py  check-signoz-compose-config.sh  install-claude-otel.sh  install-codex-otel.sh  send-test-log.py  smoke-test-otel.py
services/auth-api/: Dockerfile  pyproject.toml
services/auth-api/src/: app.py  db.py  settings.py  tokens.py
services/auth-api/src/auth_api/: __init__.py  app.py
services/auth-api/tests/: test_auth_api.py  test_db.py  test_runtime_config.py  test_tokens.py
templates/: claude.env  claude.max-capture.env
tests/: test_aotel001_scaffold.py  test_aotel005_nginx.py  test_aotel006_collector.py  test_aotel007_gateway_compose.py  test_aotel008_signoz.py  test_aotel009_smoke_scripts.py  test_aotel010_codex_installer.py  test_aotel011_claude_installer.py  test_aotel012_dashboards.py  test_ci_contract.py
(+21 files in other folders)
