[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-otelctl"
version = "0.1.0"
description = "Local operator CLI for the agent OpenTelemetry trial"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
otelctl = "otelctl:entrypoint"

[tool.setuptools]
py-modules = ["otelctl"]
packages = ["otelctl_auth", "otelctl_templates"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
otelctl_auth = ["migrations/*.sql"]
otelctl_templates = ["*.toml", "*.env"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
