[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-otel-auth-api"
version = "0.1.0"
description = "Token verification service for the agent OpenTelemetry trial"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "pydantic-settings>=2,<3",
  "uvicorn[standard]>=0.30,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
